datetime: Add debug to timezone monitor

To make debugging issues with the automatic timezone feature easier.

https://bugzilla.gnome.org/show_bug.cgi?id=794288